# hew

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  desktop-e2e.yml  regen-visual-goldens.yml  release.yml
app/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
app/e2e/: README.md  edge-stability.spec.ts  follow-me-2-regions.spec.ts  follow-me-2.spec.ts  follow-me-face-path.spec.ts  follow-me-face-pointer.spec.ts  follow-me-partial-sweep.spec.ts  follow-me-start-cue.spec.ts  follow-me.spec.ts  framing.spec.ts  harness.spec.ts  hover-dock.spec.ts  input-pipeline.spec.ts  materials.spec.ts  object-info-dimensions.spec.ts  playtest-fixes.spec.ts  section-plane.spec.ts  session.spec.ts  sketch-planes.spec.ts  smoke.spec.ts  stl-import.spec.ts  tags.spec.ts  tools.spec.ts  ui-chrome.spec.ts  unified-open.spec.ts  web-smoke.spec.ts
app/e2e/helpers/: projectWorldToScreen.test.ts  projectWorldToScreen.ts  render.ts
app/e2e/visual/: README.md  box.spec.ts  multi.spec.ts
app/public/samples/: cafe-table.hew  pen-cup.hew  side-table.hew  wall-clock.hew
app/scripts/: build-wasm.mjs  capture-docs-screenshots.mjs
app/src/: App.openInNewWindow.test.tsx  App.test.tsx  App.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  TitleBar.test.tsx  TitleBar.tsx  index.css  kernelErrors.test.ts  kernelErrors.ts  main.tsx  nativeMenuParity.test.ts  paint.test.ts  paint.ts  platform.ts  sceneVisibility.test.ts  sceneVisibility.ts  smoke.test.ts  vite-env.d.ts
app/src/io/: documentSession.test.ts  documentSession.ts  fileHost.ts  fsa.d.ts  logFileStore.ts  recoveryStore.test.ts  recoveryStore.ts  relativeTime.ts  reproducerStore.ts  tauriFileHost.ts  tauriLogFileStore.ts  tauriRecoveryStore.ts  tauriReproducerStore.ts  webFileHost.ts  webLogFileStore.ts  webRecoveryStore.ts  webReproducerStore.ts
app/src/log/: LogPanel.test.tsx  LogPanel.tsx  LogStore.test.ts  LogStore.ts  RenderStatsReadout.test.tsx  RenderStatsReadout.tsx  consoleCapture.ts  diagnosticLog.test.ts  diagnosticLog.ts  reportBug.test.ts  reportBug.ts  reproducerDump.test.ts  reproducerDump.ts
app/src/palette/: CommandPalette.test.tsx  CommandPalette.tsx  recency.test.ts  recency.ts  registry.test.ts  registry.ts  search.test.ts  search.ts
app/src/panels/: ContextualDock.test.tsx  ContextualDock.tsx  DocumentTree.tsx  ExportDialog.tsx  FloatingPanel.tsx  ImportReportDialog.tsx  MenuBar.tsx  (+23 more)
brand/: README.md
crates/dae-import/: Cargo.toml
crates/dae-import/src/: heal.rs  lib.rs  material.rs  meta.rs  parse.rs  uv.rs
crates/dae-import/tests/: byte_fuzz.rs  integration.proptest-regressions  integration.rs
crates/dae-import/tests/fixtures/: box_closed.dae  box_open.dae  box_two_sided.dae  countertop-experiment.dae  fin_nonmanifold.dae  fins_split_warnings.dae  group_and_instance.dae  material_color.dae  material_texture.dae  material_transparent.dae  polygons_with_hole.dae  yup_cm.dae
crates/gltf-import/: Cargo.toml
crates/gltf-import/src/: buffers.rs  convert.rs  lib.rs  material.rs
crates/gltf-import/tests/: byte_fuzz.proptest-regressions  byte_fuzz.rs  integration.rs  roundtrip.rs
crates/gltf-import/tests/fixtures/: box.blender.glb  box.edited.glb  box.glb  countertop.blender.glb  countertop.edited.glb  countertop.glb  instances.blender.glb  instances.edited.glb  instances.glb
crates/inference/: Cargo.toml
crates/inference/src/: index.rs  lib.rs
crates/inference/tests/: index_props.rs  inference_specs.rs
crates/kernel/: Cargo.toml
crates/mesh-heal/: Cargo.toml
crates/skp-import/: Cargo.toml
crates/skp-import/examples/: diag_alpha.rs  diag_import.rs  diag_layers.rs  diag_materials.rs  diag_render.rs  diag_theater.rs  diag_tris.rs
crates/skp-import/src/: convert.rs  lib.rs  material.rs
crates/skp-import/tests/: byte_fuzz.proptest-regressions  byte_fuzz.rs  differential.rs  import_specs.rs  smoke.rs
crates/skp-import/tests/fixtures/: back-material.dae  back-material.skp  box-component-two-instances.dae  box-component-two-instances.skp  box-component.dae  box-component.skp  box-group.dae  box-group.skp  box-two-materials.dae  box-two-materials.skp  box-v2013.skp  box-v2026.skp  box.dae  box.skp  component-move.dae  component-move.skp  component-rotate.dae  component-rotate.skp  curve.dae  curve.skp  cylinder.skp  empty.skp  face-with-hole.dae  face-with-hole.skp  group.dae  group.skp  guide.skp  hidden-entities.dae  hidden-entities.skp  house.dae  house.skp  instance-scaled.dae  instance-scaled.skp  layers.dae  layers.skp  long-name.skp  material-one-face.dae  material-one-face.skp  mixed-definition.dae  mixed-definition.skp  (+2 more)
crates/stl-import/: Cargo.toml
crates/tessellate/: Cargo.toml
crates/tessellate/proptest-regressions/: lib.txt
crates/tessellate/src/: lib.rs  refacet.rs
crates/tessellate/tests/: refacet_specs.rs
crates/tessellate/tests/golden/: unattributed_box_mesh.golden
crates/wasm-api/: Cargo.toml  LICENSE-EXCEPTION
crates/wasm-api/src/: lib.rs  log.rs  recording.rs
crates/wasm-api/tests/fixtures/: follow-me-2.hew
docs/: ARCHITECTURE.md  BRAND.md  DEVELOPMENT.md  DIAGNOSTICS.md  HEW_FILE_FORMAT.md  INTEROP.md  ROADMAP.md
docs/design/: flat-face-pushpull.md  follow-me.md  group-ops.md  sketch-solid-model.md  true-curves.md
scripts/: blender_roundtrip.py  verify-full.sh  verify.sh
shells/tauri/: package.json
shells/tauri/src-tauri/: Cargo.toml  tauri.conf.json
shells/tauri/src-tauri/capabilities/: default.json
shells/tauri/src-tauri/icons/: icon.icns
shells/tauri/src-tauri/src/: main.rs
shells/web/: README.md  _headers  inject-csp.mjs  package.json
site/: astro.config.mjs  package.json
site/public/: robots.txt
site/src/: content.config.ts
tools/macos-ui/: README.md  hew-ui.sh  mouse.swift
tools/replay-runner/: .gitignore  README.md  freeze.mjs  generate.mjs  lib.mjs  package.json  run.mjs
tools/sketchup/: README.md  hew_export_tags.rb
(+316 files in other folders)
