[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/inference",
    "crates/tessellate",
    "crates/wasm-api",
]
# The Tauri host crate is deliberately NOT a workspace member: it drags
# desktop-only dependencies into `cargo test --workspace` and would slow the
# kernel verification loop. It builds via `pnpm tauri` from shells/tauri.
exclude = ["shells/tauri/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
kernel = { path = "crates/kernel" }
inference = { path = "crates/inference" }
tessellate = { path = "crates/tessellate" }

slotmap = "1"
proptest = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
# WASM payload size matters for the web shell.
opt-level = "s"
lto = true
