[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/inference",
    "crates/tessellate",
    "crates/wasm-api",
    "crates/mesh-heal",
    "crates/dae-import",
    "crates/gltf-import",
]
# The Tauri host crate is deliberately NOT a workspace member: it drags
# desktop-only dependencies into `cargo test --workspace` and would slow the
# kernel verification loop. It builds via `pnpm tauri` from shells/tauri.
#
# The vendored dae-parser is likewise excluded: it is third-party code (built via
# dae-import's path dep) and must not be held to Hew's `clippy -D warnings` bar.
#
# skp-import is excluded while its clean-room .skp reader (OpenSKP) is
# developed externally; it joins the workspace once the reader is published.
exclude = [
    "shells/tauri/src-tauri",
    "crates/vendor/dae-parser",
    "crates/skp-import",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
kernel = { path = "crates/kernel" }
inference = { path = "crates/inference" }
tessellate = { path = "crates/tessellate" }
mesh-heal = { path = "crates/mesh-heal" }
dae-import = { path = "crates/dae-import" }
gltf-import = { path = "crates/gltf-import" }

slotmap = "1"
proptest = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false }
# Structured diagnostic logging (docs/DEVELOPMENT.md, M14). kernel/inference use only
# the `tracing` facade (events, no I/O); wasm-api owns the Subscriber + the
# wasm→shell drain seam. default-features=false drops the `#[instrument]` proc
# macro we don't use, keeping the WASM bundle lean.
tracing = { version = "0.1", default-features = false, features = ["std"] }
dae-parser = { path = "crates/vendor/dae-parser" }

[profile.release]
# WASM payload size matters for the web shell.
opt-level = "s"
lto = true
