[package]
name = "dae-import"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kernel.workspace = true
mesh-heal.workspace = true
dae-parser = { workspace = true, default-features = true, features = [] }
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
kernel.workspace = true
