[package]
name = "inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kernel.workspace = true
tracing.workspace = true

# Test-only, mirroring crates/kernel (DEVELOPMENT.md rule 3): property-based
# equivalence tests for the spatial index. Never a runtime dependency (rule 1).
[dev-dependencies]
proptest.workspace = true
