# skp-import — SketchUp `.skp` -> Hew Objects, via the clean-room OpenSKP reader.
#
# The `openskp` dependency is rev-pinned to the hosted OpenSKP repo
# (https://github.com/hew3d/openskp — clean-room SketchUp 2017 reader,
#; local development clone lives at../openskp). Bump the rev
# deliberately: import-quality gaps are fixed in OpenSKP first, then the pin
# advances here.
[package]
name = "skp-import"
version.workspace = true
edition.workspace = true

[dependencies]
kernel = { workspace = true }
mesh-heal = { workspace = true }
openskp = "0.1.0"

[dev-dependencies]
# Differential validation: fixture pairs ship a `.dae` ground-truth
# export next to each `.skp`; both importers must agree.
dae-import = { workspace = true }
