[package]
name = "wasm-api"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kernel.workspace = true
inference.workspace = true
tessellate.workspace = true
dae-import.workspace = true
gltf-import.workspace = true
slotmap.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
