[workspace]

[package]
name = "hew-desktop"
version = "0.1.0"
edition = "2021"
# edition 2024 is not yet supported by tauri-build; 2021 is current Tauri v2 default.
# Not a workspace member, so the license is stated directly (see LICENSE and
# LICENSE-EXCEPTION at the repo root).
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
